# antigravity-reab-auditiva

./: #PROJECT_BRAIN.md  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MEMORY.md  PRODUTO.md  README.md  SETUP_AND_MIGRATION.md  SYSTEM.md  analysis.txt  build_log.txt  bundle.bat  diag.bat  flutter.bat  l10n.yaml  local.properties  pubspec.yaml  stress_test_apk.ps1  supabase_migration_002.sql  supabase_migration_003.sql  supabase_setup.sql
.agents/rules/: geral.md
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
assets/speech/: .gitkeep
cpp/: CMakeLists.txt  ambience_looper.h  biquad_filter.h  dsp_engine.cpp  dsp_engine.h  fir_filter.cpp  fir_filter.h  native_bridge.cpp  noise_generator.h  oboe_engine.cpp  oboe_engine.h  pffft.c  pffft.h  sample_player.h  sine_oscillator.h  tee_processor.h  test_ringbuffer.cpp
docs/: HISTORICO.md  MASTER_PLAN.md  i18n.md
docs/treinos/: de-que-lado.md  distinguir-sons.md  frases.md  no-barulho.md  teste-de-audicao.md  teste-fala-no-ruido.md
lib/: main.dart
lib/audio_engine/: audio_engine.dart  native_engine.dart
lib/core/: adaptive_staircase.dart  ambience_synth.dart  coclear_dead_region.dart  environments.dart  gamification_controller.dart  listening_mode.dart  outcome_test_bank.dart  phoneme_map.dart  sentence_bank.dart  spatial_controller.dart  theme_notifier.dart
memory/: clinical-claims-vs-implementation.md
supabase/: schema.sql
test/: rehab_session_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+57 files in other folders)
